[package]
name = "events_loop"
version = "0.1.1"
authors = ["recesfulu <recesfulu@gmail.com>"]
description = "Generic events loop interface, for libraries working with event loops"
repository = "https://github.com/recesfulu/events_loop.git"
keywords = ["windowing","window","system","event","events"]
categories = ["os", "gui"]
license = "Apache-2.0"
documentation = "https://docs.rs/events_loop"

[dependencies]
